<resources>
    <string name="app_name">oksan</string>
    <!--phone wechat-->
    <string name="service_phone_text">18859599189（手机/微信）</string>
    <string name="service_phone">18859599189</string>
    <!--Title-->
    <string name="login">登录</string>
    <string name="code_login">验证码登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="modify_password">修改登录密码</string>
    <string name="modify_phone">修改手机号码</string>
    <string name="logout">退出登录</string>
    <string name="unlock">开伞槽锁</string>
    <string name="realnamecerfi">实名认证</string>
    <string name="modify_cerfi">修改证件</string>
    <string name="submit_audits">提交审核</string>
    <string name="main_title">oksan共享雨伞</string>
    <string name="account_balance">账户余额</string>
    <string name="person_center">个人中心</string>
    <string name="scanner_borrow">扫码借伞</string>
    <string name="my_wallet">我的钱包</string>
    <string name="ranking">全国月排行榜</string>
    <string name="guard_history">历史导购记录</string>
    <string name="invatation_reward">邀请导游有奖</string>
    <string name="reward_detail">奖励明细</string>
    <string name="gift_shop">礼品商城</string>
    <string name="work_history">历史工作记录</string>
    <string name="order_history">历史订单记录</string>
    <string name="near_shop">附近店铺</string>
    <string name="setting">设置</string>
    <string name="help">帮助中心</string>
    <string name="site_manager">管理员站点管理</string>
    <string name="maintain_manager">维护人员管理系统</string>
    <string name="maintain_site_manager">维护人员站点管理</string>
    <string name="maintain_project">维护项目</string>
    <string name="fault_handle">故障处理说明</string>
    <string name="add_shop">新增店铺</string>
    <string name="route">路线规划</string>
    <string name="site_add_report">站点进货汇报</string>
    <string name="site_cut_report">站点减货汇报</string>
    <string name="site_stock_report">站点存货汇报</string>
    <string name="guide_welfare">导游福利</string>
    <string name="site_manager_welfare">站点管理员福利</string>
    <!--注册-->
    <string name="phone_number_hint">请输入手机号</string>
    <string name="address_hint">请输入收获地址</string>
    <string name="account_password_hint">请输入密码</string>
    <string name="account_verfy_code_hint">请输入验证码</string>
    <string name="account_login_button_text">登录</string>
    <string name="register_text">新用户注册</string>
    <string name="identify_code_login_button_text">短信验证码登录</string>
    <string name="forget_pwd_text">忘记密码</string>
    <string name="phoneNum">手机号码</string>
    <string name="verfyCode">验证码</string>
    <string name="getVerfyCode">获取验证码</string>
    <string name="inputVerfyCode">请输入验证码</string>
    <string name="setPwd">设置密码</string>
    <string name="checkPwd">确认密码</string>
    <string name="InvitationCode">邀请码</string>
    <string name="yourRole">您的角色</string>
    <string name="PleaseSelect">请选择</string>
    <string name="Optional">选填</string>

    <!-- 短信验证倒计时 -->
    <string name="txt_getMsgCode_validate">获取验证码</string>
    <string name="txt_getMsgCode_validate2">获取动态密码</string>

    <!-- api -->
    <string name="service_error">服务异常，请稍后再试！</string>

    <!-- guide_welfare -->
    <string name="guide_welfare01">引导游客租借共享伞即可获得10-50元/组奖励金</string>
    <string name="guide_welfare02">推荐一导游好友注册并成功出单即可获得20元/人奖励金</string>
    <string name="guide_welfare03">终身免费用伞</string>
    <string name="guide_welfare04">奖励金可以在商城直接兑换超值礼品</string>

    <!-- site_manager_welfare -->
    <string name="site_manager_welfare01">每完成一笔成功借出（超出10分钟）的订单、可获得0.3/把奖励金</string>
    <string name="site_manager_welfare02">每年在我司规定的时间内对站点的存货进行汇报。每次汇报均可获得3元奖励金。</string>
    <string name="site_manager_welfare03">终身免费用伞</string>
    <string name="site_manager_welfare04">奖励金可以在商城直接兑换超值礼品</string>

    <!-- scanner brrow role -->
    <string name="scanner_borrow_role_01">任意伞桩扫码开锁、进入导购状态。</string>
    <string name="scanner_borrow_role_02">导游状态时间每次10分钟。</string>
    <string name="scanner_borrow_role_03">导游还伞后，再扫描取伞，进入下一轮导购状态。</string>
    <string name="scanner_borrow_role_04">游客第9天内未归伞则视为伞出售，导购得到租伞分组50/组。\n游客在第1-8天把伞归还，视为游客借伞，导游得到租伞分成10元/组。</string>
    <string name="scanner_borrow_role_05">单位：1组=10把伞。</string>
    <string name="scanner_borrow_role_06">每天订单每15天结算一次。款直接汇入您的余额，您可查看每把伞的借出情况及每天的钱包余额。</string>
</resources>
