<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vinchan.shareumbrella.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/login_edit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_login_account"></ImageView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/login_phone_num_tv"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/input_height"
                    android:layout_marginLeft="7dp"
                    android:background="@drawable/bg_login_input"
                    android:ems="10"
                    android:hint="@string/phone_number_hint"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:singleLine="true"
                    android:textSize="@dimen/common_text_size">

                    <requestFocus />
                </EditText>

                <ImageButton
                    android:id="@+id/login_clear_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:padding="12dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon_login_input_clear" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_login_password"></ImageView>

            <EditText
                android:id="@+id/login_pwd_tv"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="7dp"
                android:background="@drawable/bg_login_input"
                android:ems="10"
                android:hint="@string/account_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:singleLine="true"
                android:textSize="@dimen/common_text_size" />
        </LinearLayout>

        <Button
            android:id="@+id/phone_login_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/bg_login_button"
            android:text="@string/account_login_button_text"
            android:textColor="@color/white_color"
            android:textSize="@dimen/common_button_text_size" />

        <Button
            android:id="@+id/verfycode_login_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_verfycode_login_button"
            android:text="@string/identify_code_login_button_text"
            android:textColor="@color/main_color"
            android:textSize="@dimen/common_button_text_size" />
    </LinearLayout>


    <TextView
        android:id="@+id/forget_pwd_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp"
        android:text="@string/forget_pwd_text"
        android:textColor="@color/gray_color" />

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/register_text"
        android:textColor="@color/gray_color" />
</RelativeLayout>
